--- a/ChangeLog
+++ b/ChangeLog
@@ -6,3 +6,6 @@ Added the '-f/--force' flag, and ask the user if he wants to overwrite
 an existing file by default.
 Added the '-q/--quiet' flag.
 Cleaned up the information that is printed to the terminal.
+0.9.3
+Corrected GPL license header.
+Make ignoring clients work in both ways. Now connections made to ignored clients are ignored as well.
