updated README again

--- a/README
+++ b/README
@@ -41,6 +41,8 @@ Example:       aj-snapshot -d connections.xml
 
 The daemon restores connections every 200 ms. 
 (defined by POLLING_INTERVAL_MS in aj-snapshot.c)
+For JACK connections, restoring is only done when
+the connections did actually change.
 
 You can ask the daemon to reload the XML file by sending it the 
 HUP signal. This makes it possible to add new connections while 
@@ -54,6 +56,8 @@ Example:    aj-snapshot -dx connections.xml &
             ... add more connections ...
             aj-snapshot -f connections.xml
             kill -HUP $(pidof aj-snapshot)
+
+NOTE: aj-snapshot will try to survive a JACK server shutdown.
 
 ----------------------------------------------------------------
 
