--- a/man/aj-snapshot.1
+++ b/man/aj-snapshot.1
@@ -17,10 +17,12 @@ Only store or restore ALSA midi connections. Also works in daemon mode.
 \fB-d \fRor \fB--daemon\fR
 .IP ""
 Run aj-snapshot in daemon mode. Aj-snapshot will first try to restore the connections from your snapshot file. After this, it will wait for new clients to be registered with ALSA or JACK. Whenever a new client is registered, it will try to restore the connections from your snapshot file. (NOTE: this is the behaviour since version 0.9.6.). If you start aj-snapshot in daemon mode, you don't need to specify the \fB-r\fR,\fB--restore\fR flag as it is implied anyway. 
+.IP ""
+When the JACK server is stopped (or crashes) while aj-snapshot runs in daemon mode, aj-snapshot will try to keep running. When the JACK server is started again later, aj-snapshot will reattach automatically and restore your connections when needed.
 .RS
 .PP
 .B TIP: 
-When you have changed the connections between programs while an aj-snapshot daemon is running, it is possible to save the new state to the file used by the daemon (with a second instance of aj-snapshot), and force the the daemon to reload the file by sending it the -HUP (hangup) signal:
+When you have changed the connections between programs while an aj-snapshot daemon is running, it is possible to save the new state to the file used by the daemon (with a second instance of aj-snapshot), and force the daemon to reload the file by sending it the -HUP (hangup) signal:
 .RS
 .PP
 .B aj-snapshot -d my_snapshot.xml&  \fR run aj-snapshot in daemon mode
@@ -49,18 +51,70 @@ When you specify the \fB-r\fR flag, aj-snapshot will try to restore all ALSA and
 .PP
 \fB-x \fRor \fB--remove\fR
 .IP ""
-The \fB-x\fR option can be used when restoring connections, or when running in daemon mode. With this option, aj-snapshot will remove all existing connections before restoring the snapshot file. When you combine it with the \fB-a\fR or \fB-j\fR option, only the connections for the specific subsystem (ALSA or JACK) will be removed. Without this option, aj-snapshot will try to restore connections on top of the connections that are already active. 
+The \fB-x\fR option can be used when restoring connections, or when running in daemon mode. With this option, aj-snapshot will remove all existing connections before restoring the snapshot file. When you combine it with the \fB-a\fR or \fB-j\fR option, only the connections for the specific subsystem (ALSA or JACK) will be removed. Without the \fB-x\fR option, aj-snapshot will try to restore connections on top of the connections that are already active. 
 .IP ""
 There is one more way in which you can use the \fB-x\fR option. If you call aj-snapshot without the \fIFILE\fR argument, you can use the \fB-x\fR option to remove all existing ALSA and JACK connections (without doing anything else). As before you can combine it with the \fB-a\fR or \fB-j\fR options.
 .PP
 \fB-i \fR client_name
 .br or \fB--ignore\fR client_name
 .IP ""
-You can use this option to name a client that should be ignored by aj-snapshot. You should write the exact name of the client after the -i option. If that name contains spaces, or other characters that have special meaning to the shell, you should put the name between single (safest) or double quotes. To know the exact name of a client, you could save a snapshot and look up the name in the snapshot file. If you want to ignore multiple clients, you have to repeat the \fB-i\fR option with different client names (upto 50 clients).
+You can use this option to name a client that should be ignored by aj-snapshot. You should write the exact name of the client after the -i option. If that name contains spaces, or other characters that have special meaning to the shell, you should put the name between single (safest) or double quotes. To know the exact name of a client, you could save a snapshot and look up the name in the snapshot file. If you want to ignore multiple clients, you have to repeat the \fB-i\fR option with different client names (the maximum is 50 clients).
 .PP
 \fB-h \fRor \fB--help\fB
 .IP ""
 Print a short help message
+.SH EXAMPLES
+.PP
+.B aj-snapshot test.snap
+.IP ""
+Stores a snapshot of all current ALSA and JACK connections to a file called "test.snap". If that file already exists, aj-snapshot will ask you if you want to overwrite that file.
+.PP
+.B aj-snapshot -r test.snap
+.IP ""
+Restores all ALSA and JACK connections from the file "test.snap". This will leave any other active connections intact.
+.PP
+.B aj-snapshot -xr test.snap
+.IP ""
+Restore all ALSA and JACK connections from the file "test.snap", but remove all existing connections first.
+.PP
+.B aj-snapshot -a test.snap
+.IP ""
+Store all current ALSA connections to "test.snap".
+.PP
+.B aj-snapshot -rj test.snap
+.IP ""
+Restore all JACK connections from "test.snap". This means that ALSA connections that might be stored in the file won't be restored.
+.PP
+.B aj-snapshot -qfj test.snap
+.IP ""
+Store all current JACK connections to "test.snap". Don't print any info on standard out (be quiet), and forcibly overwrite "test.snap" if it already exists.
+.PP
+.B aj-snapshot -ax
+.IP ""
+Remove all ALSA connections
+.PP
+.B aj-snapshot -d test.snap &
+.IP ""
+Run aj-snapshot in daemon mode and make it a background process (&). Whenever a new ALSA or JACK client registers, connections from test.snap will be restored.
+.PP
+.B aj-snapshot -djx test.snap &
+.IP ""
+Run aj-snapshot in daemon mode for the JACK connections in "test.snap". Remove all existing JACK connections whenever the connections from test.snap are restored.
+.PP
+1)
+.B aj-snapshot -d test.snap &
+.br
+2)
+.B aj-snapshot -f test.snap
+.br
+3)
+.B kill -HUP $(pidof aj-snapshot)
+.IP ""
+1) First start up aj-snapshot in daemon mode with the file "test.snap". 
+.br
+2) After you've made some connection changes, you can make a second instance of aj-snapshot (which is not run in daemon mode) overwrite that file with the new connections state. 
+.br
+3) Then you can send the HANGUP signal to the daemon to make it reload the file with the new connections state (see 'man kill', and 'man pidof').
 .SH AUTHOR
 Written by Lieven Moors and Jari Suominen
 .SH REPORTING BUGS
@@ -72,4 +126,10 @@ To report aj-snapshot bugs, or if you have feature requests:
 Aj-snapshot home page:
 .br
 .UR http://aj-snapshot.sourceforge.net/
+.UE
+.PP
+Clone the git repository:
+.br
+git clone
+.UR git://gitorious.org/aj-snapshot/aj-snapshot.git
 .UE
