added copyright notice to manual file

--- a/man/aj-snapshot.1
+++ b/man/aj-snapshot.1
@@ -120,3 +120,10 @@ Clone the git repository:
 git clone
 .UR git://gitorious.org/aj-snapshot/aj-snapshot.git
 .UE
+.SH COPYRIGHT
+Copyright \(co 2009-2011 Lieven Moors and Jari Suominen.
+.br
+License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>.
+.br
+This is free software: you are free to change and redistribute it.
+There is NO WARRANTY, to the extent permitted by law.
