--- a/man/aj-snapshot.1
+++ b/man/aj-snapshot.1
@@ -16,7 +16,9 @@ Only store or restore ALSA midi connections. Also works in daemon mode.
 .PP
 \fB-d \fRor \fB--daemon\fR
 .IP ""
-Run aj-snapshot in daemon mode. Aj-snapshot will first try to restore the connections from your snapshot file. After this, it will wait for new clients to be registered with ALSA or JACK. Whenever a new client is registered, it will try to restore the connections from your snapshot file. (NOTE: this is the behaviour since version 0.9.6.). If you start aj-snapshot in daemon mode, you don't need to specify the \fB-r\fR,\fB--restore\fR flag as it is implied anyway. 
+Run aj-snapshot in daemon mode. Aj-snapshot will first try to restore the connections from the specified snapshot file. After this, it will wait for new ports to be registered with ALSA or JACK. Every second by default, aj-snapshot will check if new ports are registered in ALSA or JACK. When this is the case, it will try to restore the connections from your snapshot file. If you start aj-snapshot in daemon mode, you don't need to specify the \fB-r\fR,\fB--restore\fR flag as it is implied anyway. 
+.IP ""
+If you send the HUP signal to the daemon, the daemon will reload the snapshot file. This gives you the possibility to trigger a connections restore. For an example on how to do this, see the EXAMPLES section below. When you combine the daemon mode with the \fB-x\fR,\fB--remove\fR option, sending the HUP signal to the daemon will clear all connections before restoring.
 .IP ""
 When the JACK server is stopped (or crashes) while aj-snapshot runs in daemon mode, aj-snapshot will try to keep running. When the JACK server is started again later, aj-snapshot will reattach automatically and restore your connections when needed.
 .PP
@@ -27,6 +29,11 @@ When you try to save a snapshot over an existing file, aj-snapshot will ask you 
 \fB-j \fRor \fB--jack\fR
 .IP ""
 Only store or restore JACK audio and midi connections. Also works in daemon mode.
+.PP
+\fB-p \fI interval
+.br or \fB--poll \fIinterval
+.IP ""
+Whenever a program registers a port with ALSA or JACK, aj-snapshot will see if there are connections in the snapshot file that should be restored. By default, aj-snapshot will check (poll) if there are new ports every second (1000 milliseconds). With this option you can choose how often aj-snapshot should check for new ports. The value of \fIinterval\fR should be specified in milliseconds.
 .PP
 \fB-q \fRor \fB--quiet\fR
 .IP ""
@@ -42,8 +49,8 @@ The \fB-x\fR option can be used when restoring connections, or when running in d
 .IP ""
 There is one more way in which you can use the \fB-x\fR option. If you call aj-snapshot without the \fIFILE\fR argument, you can use the \fB-x\fR option to remove all existing ALSA and JACK connections (without doing anything else). As before you can combine it with the \fB-a\fR or \fB-j\fR options.
 .PP
-\fB-i \fR client_name
-.br or \fB--ignore\fR client_name
+\fB-i \fI client_name
+.br or \fB--ignore\fI client_name
 .IP ""
 You can use this option to name a client that should be ignored by aj-snapshot. You should write the exact name of the client after the -i option. If that name contains spaces, or other characters that have special meaning to the shell, you should put the name between single (safest) or double quotes. To know the exact name of a client, you could save a snapshot and look up the name in the snapshot file. If you want to ignore multiple clients, you have to repeat the \fB-i\fR option with different client names (the maximum is 50 clients).
 .PP
@@ -82,7 +89,7 @@ Remove all ALSA connections
 .PP
 .B aj-snapshot -d test.snap &
 .IP ""
-Run aj-snapshot in daemon mode and make it a background process (&). Whenever a new ALSA or JACK client registers, connections from test.snap will be restored.
+Run aj-snapshot in daemon mode and make it a background process (&). Whenever a new ALSA or JACK client registers a port, connections from test.snap will be restored.
 .PP
 .B aj-snapshot -djx test.snap &
 .IP ""
@@ -99,9 +106,9 @@ Run aj-snapshot in daemon mode for the JACK connections in "test.snap". Remove a
 .IP ""
 1) First start up aj-snapshot in daemon mode with the file "test.snap". 
 .br
-2) After you've made some connection changes, you can make a second instance of aj-snapshot (which is not run in daemon mode) overwrite that file with the new connections state. 
+2) After some connection changes, a second instance of aj-snapshot (which is not run in daemon mode) overwrites that file with the new connections state. 
 .br
-3) Then you can send the HANGUP signal to the daemon to make it reload the file with the new connections state (see 'man kill', and 'man pidof').
+3) Send the HANGUP signal to the daemon to make it reload the file with the new connections state (see 'man kill', and 'man pidof').
 .SH AUTHOR
 Written by Lieven Moors and Jari Suominen
 .SH REPORTING BUGS
