fix bug in man page file, reported by debian: add description for apropos and whatis databases

--- a/man/aj-snapshot.1
+++ b/man/aj-snapshot.1
@@ -3,7 +3,7 @@
 .\"
 .TH AJ-SNAPSHOT 1 "NOVEMBER 2011" Linux "User Manuals"
 .SH NAME
-aj-snapshot
+aj-snapshot \- store and restore snapshots of JACK and/or ALSA connections
 .SH SYNOPSIS
 .B aj-snapshot \fR[ \fB-adfjqrx\fR ] [ \fB-p \fIpolling_interval\fR ] [ \fB-i \fIclient_name\fR ]... [ \fIFILE\fR ]
 .SH DESCRIPTION
